[package]
name = "nt-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", features = ["persistence"] }
network-tables = { version = "0.0.12", features = ["client-v4"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "rt", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
